fixed white space at the bottom of the page

--- a/src/Projects/Project/Neurorehab/Neurorehab.scss
+++ b/src/Projects/Project/Neurorehab/Neurorehab.scss
@@ -1,3 +1,3 @@
-#notinstagram-page {
+#neurorehab-page {
   min-height: 65vh;
 }
